--- a/views/activity.twig
+++ b/views/activity.twig
@@ -45,64 +45,32 @@
 
         <p><b>NOTE: Double click to enlarge images</b></p>
         <div class="container mainContainer">
-          <div class="col text-right">
-            <img id="img2find_right" height="300" width="500">
-            <p style="text-align:right;font-size:150%;"><b>Front View</b></p>
           </div>
             <div class="row">
-                <div class="row">
-                  <div class="img-with-text">
-                    <img id="img2find_left" height="500">
-
-                    <p style="text-align:center;font-size:140%;"><b>Lateral View</b></p>
-
-                  </div>
+                </div>
                   <div class="img-with-text">
                     <canvas id="canvas"></canvas>
-                    <canvas id="zoomcanvas"></canvas>
                     <p style="text-align:center;font-size:150%;"><b>Top View</b></p>
                   </div>
-                </div>
 
                 <div class="col-sm answeractivity">
 
-                    <p>Which of the target objects are present in the Top View image?</p>
+                    <p>Do you see the pickaxe in the above image?</p>
                     <div class="btn-group btn-group-toggle" data-toggle="buttons">
                         <label class="btn btn-secondary" >
-                            <input type="radio" id="option11" name="q1" autocomplete="off"> Pickaxe
+                            <input type="radio" id="option11" name="q1" autocomplete="off"> Yes
                         </label>
                         <label class="btn btn-secondary" >
-                            <input type="radio" id="option12" name="q1" autocomplete="off"> Hat
-                        </label>
-                        <label class="btn btn-secondary" >
-                            <input type="radio" id="option13" name="q1" autocomplete="off"> Wrench
+                            <input type="radio" id="option12" name="q1" autocomplete="off"> No
                         </label>
                     </div>
                     <div id="popup" style="color: blue;"> </div>
 
-                    <p id="value-simple" style="visibility: hidden;"></p>
-                    <p>Please rate the confidence in your decision.</p>
-                    <div id="slider-simple"></div>
-
-                    <br>
-                    <p>What do you think the majority of people responded?</p>
-
-                    <div class="btn-group btn-group-toggle" data-toggle="buttons">
-                        <label class="btn btn-secondary" id="option21">
-                            <input type="radio" name="q3" autocomplete="off"> Yes
-                        </label>
-                        <label class="btn btn-secondary" id="option22">
-                            <input type="radio" name="q3" autocomplete="off"> No
-                        </label>
-                    </div>
                     <form id="subForm" action="/activity/{{ userID }}/" method="POST">
                         <p class="py-2 text-danger" id="errorText2"> {{ error }} </p>
                         <input type="submit" class="btn btn-outline-success" id="submitButton" value="Submit">
                     </form>
                 </div>
-            </div>
-
-        </div>
 
     </div>
 </div>
@@ -125,13 +93,6 @@
     var canvas = document.getElementById('canvas');
     var ctx = canvas.getContext('2d');
 
-    //zoom canvas
-    var zoomcanvas = document.getElementById('zoomcanvas');
-    var zoom_ctx = zoomcanvas.getContext('2d');
-    zoom_ctx.canvas.width = 500;
-    zoom_ctx.canvas.height = 500;
-    document.getElementById("zoomcanvas").style="border:1px solid     #c3c3c3; position:absolute; left:1950px; top: 772px;"
-
     var imgWidth = 500;
     var imgHeight = 500;
     ctx.canvas.width = imgWidth;
@@ -148,13 +109,7 @@
     // Popup text when "Yes" selected
     var yesButon = document.getElementById("option11");
     var noButton = document.getElementById("option12");
-    yesButon.onclick = function (){
-        document.getElementById("popup").innerText = "Please draw a bounding box on the image around the pickaxe.";
-    }
-    noButton.onclick = function () {
-        document.getElementById("popup").innerText = "";
-        document.getElementById("output").innerText = "";
-    }
+
     window.onload = function () {
         if (duration <= 0) {
             document.getElementById("popup").innerText = "";
