--- a/views/index.twig
+++ b/views/index.twig
@@ -12,27 +12,25 @@
     <div class = "float left">
       <div class = "text-danger">{{ error }}</div>
       <h1 class= "py-4">Introduction</h1>
-      <p>Welcome to our study on <strong>Shape and Object Detection in Images.</strong> This study should take between 5 - 10 minutes to complete.</p>
-      <p>This study will involve completing 24 different exercises related to object detection. For each question,
+      <p>Welcome to our study on <strong>Shape and Object Detection in Images.</strong> This study should take between 5 - 15 minutes to complete.</p>
+      <p>This study will involve completing 30 different exercises related to object detection. For each question,
       you will be asked to determine if you believe a specified object is or isn't in an image.
       From the results of this study, we want to better understand how independent visual screening judgments from multiple
       participants can be aggregated to perform challenging shape and object detection tasks.
       <h1 class= "py-2">Task</h1>
-      You will be assigned 24 exercises where you will be prompted to look for a specified object
-      in an image. For each exercise, you will be asked to respond to the 3 following questions:
+      You will be assigned 30 exercises where you will be prompted to look for a specified object
+      in an image. For each exercise, you will be asked to respond to the 2 following questions:
       <br>
       <br>
       <ol>
-        <li>Is the object in the image?</li>
-        <li>Where is the object located if it is in the image?</li>
-        <li>What is your level of confidence in this decision?</li>
-        <li>What do you think the majority of people responded?</li>
+        <li>Do you see the pickaxe in the above image?</li>
+        <li>Please rate your confidence in your answer.</li>
       </ol>
-      You will have 60 seconds to respond to these three questions for each exercise. In addition, you will have the ability to rotate images to look at them at different angles. If you are unable to
-      unable to answer these questions within the 60 second time frame, the image will disappear, and you will have to submit your answers.
+      You will have 30 seconds to respond to these three questions for each exercise. If you are unable to
+      unable to answer these questions within the 30 second time frame, the image will disappear, and you will have to submit your answers.
       </p>
       <p>
-      Please answer all 4 questions to the best of your ability. If for whatever reason you do not answer all of the questions in an exercise,
+      Please answer all questions to the best of your ability. If for whatever reason you do not answer all of the questions in an exercise,
       you will be prompted to try again with the remaining time that you have left. Some questions are purposely challenging, and it may be difficult to answer the questions accurately. If you are unsure about
       a certain question, we ask that you please answer it to the best of your ability.
 
