--- a/views/index.twig
+++ b/views/index.twig
@@ -37,15 +37,19 @@
       </p>
 
       <h1 class= "py-2">Sample User Interface of Task</h1>
-      <img src= "/images/newsampleUI.png" width="430" height="720">
+      <img src= "/images/sampleUI.png" width="403" height="485">
       <h1 class= "py-2">Training</h1>
       <p>A demo video is provided to show all interactions available in our user interface.</p>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/1TxnV85nwpI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/hVuM2e7fQ64" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
       <h1 class= "py-2">When Finished...</h1>
       <p>After you have finished all the questions, there is a Demographics Questionnaire. Please complete it.
       When you have completed the Demographics Questionnaire, a redeem code will be spawned in the page.
       Please enter this redeem code in Amazon Mechanical Turk in order to get your compensation.
+      </p>
+      <p> When you are finished with this excercise, you will be able to complete <strong>2 additional excercises</strong>
+      of the same length. They will be posted in the coming two days, and you will only be able to complete
+      them after completing this one. Please check back in the following days for these additional opportunities.
       </p>
 
     <p class="forbiddenP"><strong>Please do not use the back/forward or refresh features of your browser as
