Update Welcome Page

--- a/views/index.twig
+++ b/views/index.twig
@@ -12,7 +12,7 @@
     <div class = "float left">
       <div class = "text-danger">{{ error }}</div>
       <h1 class= "py-4">Introduction</h1>
-      <p>Welcome to our study on <strong>Shape and Object Detection in Images.</strong> This study should take between 5 - 15 minutes to complete.</p>
+      <p>Welcome to our study on <strong>Shape and Object Detection in Images.</strong> This study should take between 7 - 10 minutes, but no longer than 15 minutes, to complete.</p>
       <p>This study will involve completing 30 different exercises related to object detection. For each question,
       you will be asked to determine if you believe a specified object is or isn't in an image.
       From the results of this study, we want to better understand how independent visual screening judgments from multiple
