--- a/views/index.twig
+++ b/views/index.twig
@@ -47,9 +47,7 @@
       When you have completed the Demographics Questionnaire, a redeem code will be spawned in the page.
       Please enter this redeem code in Amazon Mechanical Turk in order to get your compensation.
       </p>
-      <p> When you are finished with this excercise, you will be able to complete <strong>2 additional excercises</strong>
-      of the same length. They will be posted in the coming two days, and you will only be able to complete
-      them after completing this one. Please check back in the following days for these additional opportunities.
+      <p> Note: This is the last of the 3 rounds in this series of activities. You cannot take this activity without first completing the other two rounds.
       </p>
 
     <p class="forbiddenP"><strong>Please do not use the back/forward or refresh features of your browser as
